istio/back-golang/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: back-golang
spec:
  gateways:
  - back-golang
  - mesh
  hosts:
  - back-golang
  http:
  - route:
      - destination:
          host: back-golang
        weight: 100
